<resources>
    <string name="app_name">Culturage</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Sign Up</string>
    <string name="need_an_account">Need an account?</string>
    <string name="middle_line_text">OR</string>
    <string name="unsuccessful_login">Invalid username or password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_time">Time</string>
    <string name="prompt_">Location</string>
    <string name="prompt_tags">Tags</string>
    <string name="upload_btn">ADD!</string>
    <string name="like_btn_text">Like</string>
    <string name="comment_btn_text">Comment</string>
    <string name="search_text">Search</string>
    <string name="upload_profile_pic">Search</string>
    <string name="prompt_email">Email</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="recommendation">Similar to this culture...</string>

    <string-array name="days">
        <item>--</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>--</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <!--<item>Jan</item>-->
        <!--<item>Feb</item>-->
        <!--<item>Mar</item>-->
        <!--<item>May</item>-->
        <!--<item>Jun</item>-->
        <!--<item>Jul</item>-->
        <!--<item>Aug</item>-->
        <!--<item>Sep</item>-->
        <!--<item>Oct</item>-->
        <!--<item>Nov</item>-->
        <!--<item>Dec</item>-->
    </string-array>

    <string-array name="resolutions">
        <item>Resolution</item>
        <item>Exact</item>
        <item>Approximate</item>
        <item>Repetitive</item>
    </string-array>

</resources>
