<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.culturage.oceans_eleven.culturage.signup_login.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="@dimen/login_form_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="8dp">

        <ProgressBar
            android:id="@+id/progress_bar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="@dimen/small_padding"
            android:background="@drawable/blue_border"
            android:hint="@string/prompt_username"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:textColor="@color/login_page_text_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/blue_border"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/small_padding"
            android:textColor="@color/login_page_text_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />


        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:background="@drawable/blue_border"
            android:text="@string/action_sign_in"
            android:textColor="@color/login_page_text_color"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/large_padding">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/dummy_layout_size"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@color/login_page_text_color" />

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding"
            android:text="@string/middle_line_text"
            android:textColor="@color/login_page_text_color" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/dummy_layout_size"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@color/primary_blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/large_padding">

        <TextView
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/small_padding"
            android:text="@string/need_an_account"
            android:textColor="@color/login_page_text_color"
            android:textStyle="italic" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="@dimen/login_form_width"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_border"
            android:drawableStart="@mipmap/ic_add_user_blue"
            android:gravity="start|center_vertical"
            android:text="@string/sign_up"
            android:textColor="@color/login_page_text_color" />
    </LinearLayout>

</LinearLayout>
