<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="@dimen/small_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/upload_image_size"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/upload_image_size"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@mipmap/ic_no_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/medium_padding">

                <ImageButton
                    android:id="@+id/btnTakePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:src="@mipmap/ic_camera" />

                <ImageButton
                    android:id="@+id/btnSelectPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:src="@mipmap/ic_attach" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="@dimen/small_padding"
            android:background="@drawable/blue_border"
            android:hint="@string/prompt_title"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:textColor="@color/primary_blue"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_edit_text_height"
            android:layout_marginBottom="@dimen/small_padding"
            android:background="@drawable/blue_border"
            android:gravity="top"
            android:hint="@string/prompt_description"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:textColor="@color/primary_blue"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="@dimen/small_padding"
                android:layout_marginEnd="@dimen/tiny_padding"
                android:layout_weight="1"
                android:background="@drawable/blue_border"
                android:hint="@string/prompt_time"
                android:inputType="textAutoComplete"
                android:padding="@dimen/small_padding"
                android:textColor="@color/primary_blue"
                android:textColorHint="@color/hint_color"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/small_padding"
                android:layout_marginLeft="@dimen/tiny_padding"
                android:layout_weight="1"
                android:background="@drawable/blue_border"
                android:hint="@string/prompt_"
                android:inputType="textAutoComplete"
                android:padding="@dimen/small_padding"
                android:textColor="@color/primary_blue"
                android:textColorHint="@color/hint_color"
                android:textCursorDrawable="@null" />
        </LinearLayout>


        <EditText
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="@dimen/small_padding"
            android:background="@drawable/blue_border"
            android:gravity="top"
            android:hint="@string/prompt_tags"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:textColor="@color/primary_blue"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/upload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/white_border"
            android:text="@string/upload_btn"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>