<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.culturage.oceans_eleven.culturage.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="@dimen/login_form_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="8dp">

        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border"
            android:hint="@string/prompt_username"
            android:inputType="textAutoComplete"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/login_page_text_color"
            android:textColorHint="@android:color/secondary_text_dark" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border"
            android:textCursorDrawable="@null"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/login_page_text_color"
            android:textColorHint="@android:color/secondary_text_dark" />


        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/login_page_text_color" />

    </LinearLayout>

</LinearLayout>
